@@ -26,7 +26,7 @@
    "prereqs" : {
       "build" : {
          "requires" : {
-            "Alien::libuv" : "0.004",
+            "Alien::libuv" : "0.006",
             "Config" : "0",
             "ExtUtils::MakeMaker" : "7.12"
          }
@@ -56,7 +56,7 @@
       },
       "runtime" : {
          "requires" : {
-            "Alien::libuv" : "0.004",
+            "Alien::libuv" : "0.006",
             "Exporter" : "5.57",
             "XSLoader" : "0.14",
             "perl" : "5.008001",
@@ -69,6 +69,7 @@
             "CPAN::Meta" : "2.120900"
          },
          "requires" : {
+            "Alien::libuv" : "0.006",
             "ExtUtils::MakeMaker" : "7.12",
             "File::Spec" : "0",
             "Test::More" : "0.88"
@@ -96,7 +97,7 @@
    "version" : "0.008",
    "x_Dist_Zilla" : {
       "perl" : {
-         "version" : "5.024001"
+         "version" : "5.026000"
       },
       "plugins" : [
          {
@@ -335,7 +336,7 @@
             "class" : "Dist::Zilla::Plugin::Git::Contributors",
             "config" : {
                "Dist::Zilla::Plugin::Git::Contributors" : {
-                  "git_version" : "2.11.0 (Apple Git-81)",
+                  "git_version" : "2.11.0",
                   "include_authors" : 0,
                   "include_releaser" : 1,
                   "order_by" : "name",
@@ -365,7 +366,7 @@
                   "changelog" : "Changes"
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.11.0 (Apple Git-81)",
+                  "git_version" : "2.11.0",
                   "repo_root" : "."
                }
             },
@@ -388,7 +389,7 @@
                   "changelog" : "Changes"
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.11.0 (Apple Git-81)",
+                  "git_version" : "2.11.0",
                   "repo_root" : "."
                },
                "Dist::Zilla::Role::Git::StringFormatter" : {
@@ -410,7 +411,7 @@
                   "tag_message" : "v%v"
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.11.0 (Apple Git-81)",
+                  "git_version" : "2.11.0",
                   "repo_root" : "."
                },
                "Dist::Zilla::Role::Git::StringFormatter" : {
@@ -430,7 +431,7 @@
                   "remotes_must_exist" : 1
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.11.0 (Apple Git-81)",
+                  "git_version" : "2.11.0",
                   "repo_root" : "."
                }
             },
