@@ -15,7 +15,7 @@ my %WriteMakefileArgs = (
   "ABSTRACT" => "Some utility functions from libUV.",
   "AUTHOR" => "Chase Whitener <capoeirab\@cpan.org>",
   "BUILD_REQUIRES" => {
-    "Alien::libuv" => "0.004",
+    "Alien::libuv" => "0.006",
     "Config" => 0,
     "ExtUtils::MakeMaker" => "7.12"
   },
@@ -28,13 +28,14 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.008001",
   "NAME" => "UV::Util",
   "PREREQ_PM" => {
-    "Alien::libuv" => "0.004",
+    "Alien::libuv" => "0.006",
     "Exporter" => "5.57",
     "XSLoader" => "0.14",
     "strict" => 0,
     "warnings" => 0
   },
   "TEST_REQUIRES" => {
+    "Alien::libuv" => "0.006",
     "ExtUtils::MakeMaker" => "7.12",
     "File::Spec" => 0,
     "Test::More" => "0.88"
@@ -53,7 +54,7 @@ my %WriteMakefileArgs = (
 );
 
 my %FallbackPrereqs = (
-  "Alien::libuv" => "0.004",
+  "Alien::libuv" => "0.006",
   "Config" => 0,
   "Exporter" => "5.57",
   "ExtUtils::MakeMaker" => "7.12",
