@@ -1,6 +1,8 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+    - Bump version of Alien::libuv to 0.006 to add more diagnostics
+    - Add more diagnostics to the tests
 
 0.007     2017-06-29
     - Bump the requirement of Alien::libuv to v0.004 to ensure libuv v1+
